Name:                reform
Version:             0.1.1
-- Synopsis:
-- Description:
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw, Jasper Van der Jeugt <m@jaspervdj.be>
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, Jasper Van der Jeugt, SeeReason Partners LLC
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules:     Control.Applicative.Indexed
                       Text.Reform
                       Text.Reform.Backend
                       Text.Reform.Core
                       Text.Reform.Generalized
                       Text.Reform.Proof
                       Text.Reform.Result
  Build-depends:       base             >= 4 && <5,
                       containers       == 0.4.*,
                       mtl              >= 2.0 && < 2.2,
                       text             == 0.11.*

